fixed the responsive issue that was cutting off side1

--- a/src/app/charsheet/charsheet.component.scss
+++ b/src/app/charsheet/charsheet.component.scss
@@ -206,7 +206,7 @@ h6{
        
         
         .headers{
-            flex:2;
+            
             p:first-child{
               margin:0;  
             }
@@ -310,3 +310,9 @@ h6{
         margin: 1rem;
     }
 }
+
+@media screen and (max-width: 786px) {
+    .action{
+        flex-direction: column;
+    }
+   }
